v0.11.0/_sources/generated/statsmodels.tsa.statespace.simulation_smoother.SimulationSmoother.rst.txt
statsmodels.tsa.statespace.simulation\_smoother.SimulationSmoother
==================================================================

.. currentmodule:: statsmodels.tsa.statespace.simulation_smoother

.. autoclass:: SimulationSmoother
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~SimulationSmoother.bind
      ~SimulationSmoother.clone
      ~SimulationSmoother.extend
      ~SimulationSmoother.filter
      ~SimulationSmoother.fixed_scale
      ~SimulationSmoother.get_simulation_output
      ~SimulationSmoother.impulse_responses
      ~SimulationSmoother.initialize
      ~SimulationSmoother.initialize_approximate_diffuse
      ~SimulationSmoother.initialize_diffuse
      ~SimulationSmoother.initialize_known
      ~SimulationSmoother.initialize_stationary
      ~SimulationSmoother.loglike
      ~SimulationSmoother.loglikeobs
      ~SimulationSmoother.set_conserve_memory
      ~SimulationSmoother.set_filter_method
      ~SimulationSmoother.set_filter_timing
      ~SimulationSmoother.set_inversion_method
      ~SimulationSmoother.set_smooth_method
      ~SimulationSmoother.set_smoother_output
      ~SimulationSmoother.set_stability_method
      ~SimulationSmoother.simulate
      ~SimulationSmoother.simulation_smoother
      ~SimulationSmoother.smooth
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~SimulationSmoother.conserve_memory
      ~SimulationSmoother.design
      ~SimulationSmoother.dtype
      ~SimulationSmoother.endog
      ~SimulationSmoother.filter_augmented
      ~SimulationSmoother.filter_collapsed
      ~SimulationSmoother.filter_concentrated
      ~SimulationSmoother.filter_conventional
      ~SimulationSmoother.filter_exact_initial
      ~SimulationSmoother.filter_extended
      ~SimulationSmoother.filter_method
      ~SimulationSmoother.filter_methods
      ~SimulationSmoother.filter_square_root
      ~SimulationSmoother.filter_timing
      ~SimulationSmoother.filter_univariate
      ~SimulationSmoother.filter_unscented
      ~SimulationSmoother.inversion_method
      ~SimulationSmoother.inversion_methods
      ~SimulationSmoother.invert_cholesky
      ~SimulationSmoother.invert_lu
      ~SimulationSmoother.invert_univariate
      ~SimulationSmoother.memory_conserve
      ~SimulationSmoother.memory_no_filtered
      ~SimulationSmoother.memory_no_filtered_cov
      ~SimulationSmoother.memory_no_filtered_mean
      ~SimulationSmoother.memory_no_forecast
      ~SimulationSmoother.memory_no_forecast_cov
      ~SimulationSmoother.memory_no_forecast_mean
      ~SimulationSmoother.memory_no_gain
      ~SimulationSmoother.memory_no_likelihood
      ~SimulationSmoother.memory_no_predicted
      ~SimulationSmoother.memory_no_predicted_cov
      ~SimulationSmoother.memory_no_predicted_mean
      ~SimulationSmoother.memory_no_smoothing
      ~SimulationSmoother.memory_no_std_forecast
      ~SimulationSmoother.memory_options
      ~SimulationSmoother.memory_store_all
      ~SimulationSmoother.obs
      ~SimulationSmoother.obs_cov
      ~SimulationSmoother.obs_intercept
      ~SimulationSmoother.prefix
      ~SimulationSmoother.selection
      ~SimulationSmoother.simulation_outputs
      ~SimulationSmoother.smooth_alternative
      ~SimulationSmoother.smooth_classical
      ~SimulationSmoother.smooth_conventional
      ~SimulationSmoother.smooth_method
      ~SimulationSmoother.smooth_methods
      ~SimulationSmoother.smooth_univariate
      ~SimulationSmoother.smoother_all
      ~SimulationSmoother.smoother_disturbance
      ~SimulationSmoother.smoother_disturbance_cov
      ~SimulationSmoother.smoother_output
      ~SimulationSmoother.smoother_outputs
      ~SimulationSmoother.smoother_state
      ~SimulationSmoother.smoother_state_autocov
      ~SimulationSmoother.smoother_state_cov
      ~SimulationSmoother.solve_cholesky
      ~SimulationSmoother.solve_lu
      ~SimulationSmoother.stability_force_symmetry
      ~SimulationSmoother.stability_method
      ~SimulationSmoother.stability_methods
      ~SimulationSmoother.state_cov
      ~SimulationSmoother.state_intercept
      ~SimulationSmoother.time_invariant
      ~SimulationSmoother.timing_init_filtered
      ~SimulationSmoother.timing_init_predicted
      ~SimulationSmoother.timing_options
      ~SimulationSmoother.transition
   
   
   